--- a/Bosta_Alberto/assets/css/style.css
+++ b/Bosta_Alberto/assets/css/style.css
@@ -25,7 +25,7 @@
   }
   
   #myBtn:hover {
-    background-color: #555;
+    background-color: #ffffff;
   }
 /* Nav css */
 #cart-counter{
@@ -35,7 +35,7 @@
     font-size: 2vh;
 }
 #toggler:hover{
-    background-color:#555;
+    background-color:#fff;
 }
 .navbar-brand img{
     padding-top:-20px;
