--- a/Bosta_Alberto/assets/css/style.css
+++ b/Bosta_Alberto/assets/css/style.css
@@ -35,7 +35,7 @@
     font-size: 2vh;
 }
 #toggler:hover{
-    background-color:#fff;
+    background-color:#555;
 }
 .navbar-brand img{
     padding-top:-20px;
